apps/cloudcart/postgres/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
  namespace: cloudcart-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres

          image: postgres:16-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

        - name: init-scripts
          configMap:
            name: postgres-init-scripts
            defaultMode: 0755
